{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 663,
  "lineage": "12610290-12e5-d18e-d7ac-bbeee955f475",
  "resources": [
    {
      "module": "module.demo-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:security-group/sg-07e45f60477291226",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e45f60477291226",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "144028327883",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-aws-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01de4690ef2f182d6",
            "domain": "vpc",
            "id": "eipalloc-01de4690ef2f182d6",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-173-69.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.173.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:internet-gateway/igw-08f35dc6d1efaed3f",
            "id": "igw-08f35dc6d1efaed3f",
            "owner_id": "144028327883",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01de4690ef2f182d6",
            "connectivity_type": "public",
            "id": "nat-0119d30952f46efcf",
            "network_interface_id": "eni-0a43297b83e261b02",
            "private_ip": "10.0.2.249",
            "public_ip": "43.204.173.69",
            "subnet_id": "subnet-023d35bbaaf4ba6e4",
            "tags": {
              "Name": "eks-nat"
            },
            "tags_all": {
              "Name": "eks-nat"
            }
          },
          "dependencies": [
            "module.eks-vpc.aws_eip.nat-aws-eip",
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:route-table/rtb-0055ce2af649a9fb0",
            "id": "rtb-0055ce2af649a9fb0",
            "owner_id": "144028327883",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f35dc6d1efaed3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-pub-rt"
            },
            "tags_all": {
              "Name": "eks-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:route-table/rtb-0d59b6f281a28a1a1",
            "id": "rtb-0d59b6f281a28a1a1",
            "owner_id": "144028327883",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0119d30952f46efcf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-pvt-rt"
            },
            "tags_all": {
              "Name": "eks-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_eip.nat-aws-eip",
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_nat_gateway.nat",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025250b3ff5d852c9",
            "route_table_id": "rtb-0055ce2af649a9fb0",
            "subnet_id": "subnet-0283f94f3800996d5"
          },
          "dependencies": [
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_route_table.pub-rt",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dde854efd82a1b95",
            "route_table_id": "rtb-0055ce2af649a9fb0",
            "subnet_id": "subnet-023d35bbaaf4ba6e4"
          },
          "dependencies": [
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_route_table.pub-rt",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b9a87c4770dd70",
            "route_table_id": "rtb-0d59b6f281a28a1a1",
            "subnet_id": "subnet-0b54ee8867fd57197"
          },
          "dependencies": [
            "module.eks-vpc.aws_eip.nat-aws-eip",
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_nat_gateway.nat",
            "module.eks-vpc.aws_route_table.pvt-rt",
            "module.eks-vpc.aws_subnet.private-subnet",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b92f3eae9476354",
            "route_table_id": "rtb-0d59b6f281a28a1a1",
            "subnet_id": "subnet-0ec0645c963d7b2d0"
          },
          "dependencies": [
            "module.eks-vpc.aws_eip.nat-aws-eip",
            "module.eks-vpc.aws_internet_gateway.igw",
            "module.eks-vpc.aws_nat_gateway.nat",
            "module.eks-vpc.aws_route_table.pvt-rt",
            "module.eks-vpc.aws_subnet.private-subnet",
            "module.eks-vpc.aws_subnet.public-subnet",
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:subnet/subnet-0b54ee8867fd57197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b54ee8867fd57197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144028327883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pvt-sub-1"
            },
            "tags_all": {
              "Name": "eks-pvt-sub-1"
            },
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:subnet/subnet-0ec0645c963d7b2d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec0645c963d7b2d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144028327883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pvt-sub-2"
            },
            "tags_all": {
              "Name": "eks-pvt-sub-2"
            },
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:subnet/subnet-0283f94f3800996d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0283f94f3800996d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144028327883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pub-sub-0"
            },
            "tags_all": {
              "Name": "eks-pub-sub-0"
            },
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:subnet/subnet-023d35bbaaf4ba6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023d35bbaaf4ba6e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "144028327883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pub-sub-1"
            },
            "tags_all": {
              "Name": "eks-pub-sub-1"
            },
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:vpc/vpc-024f1ee243a7fd4e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077befd09f79900f4",
            "default_route_table_id": "rtb-0666b2b29360bd898",
            "default_security_group_id": "sg-01039e7af70c7a0ee",
            "dhcp_options_id": "dopt-51e2e039",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-024f1ee243a7fd4e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0666b2b29360bd898",
            "owner_id": "144028327883",
            "tags": {
              "Name": "eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "eks-cluster-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.worker-node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:144028327883:security-group/sg-085bf6738bd5d90ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085bf6738bd5d90ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "144028327883",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-024f1ee243a7fd4e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.eks-vpc"
          ]
        }
      ]
    }
  ]
}